@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-2-1-1
+DATE: 12/8/2014
+STAFF: sc
+CHANGES: TR11816
+PRB_StrainJAX4.sql
+
 TAG: qcreports_db-5-2-0-4
 DATE: 11/21/2014
 STAFF: lec
